force-app/main/default/objects/SR_Case__c/SR_Case__c.object-meta.xml
<CustomObject>
    <description>This the case header object</description>
    <label>SR Case</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Case Num</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>