force-app/main/default/objects/SR_Case__c/fields/Cust_Category__c.field-meta.xml
<CustomField>
    <fullName>Cust_Category__c</fullName>
    <label>Cust Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>