force-app/main/default/objects/SR_Case__c/fields/Cust_Name__c.field-meta.xml
<CustomField>
    <fullName>Cust_Name__c</fullName>
    <label>Cust Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>