force-app/main/default/objects/SR_Case__c/fields/Cust_Num__c.field-meta.xml
<CustomField>
    <fullName>Cust_Num__c</fullName>
    <label>Cust Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>