force-app/main/default/objects/SR_Case__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Doc Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>