force-app/main/default/objects/SR_Case__c/fields/Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Receive_Date__c</fullName>
    <label>Receive Date</label>
    <type>Date</type>
</CustomField>